wandb/run-20250409_203559-opl1010o/files/output.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/mnt/c/Users/yuvra/OneDrive/Desktop/Work/pytorch/SmolHub/tests/test_finetune.py", line 7, in <module>
    from SFT.helper.dataset.dataset_main import PreprocessDataset
  File "/mnt/c/Users/yuvra/OneDrive/Desktop/Work/pytorch/SmolHub/SFT/helper/dataset/dataset_main.py", line 4, in <module>
    from SFT.helper.dataset.prepare_dataset import SFTDataset, convert_dataset_to_dataloader
  File "/mnt/c/Users/yuvra/OneDrive/Desktop/Work/pytorch/SmolHub/SFT/helper/dataset/prepare_dataset.py", line 91
    padding='max_length'
            ^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
